--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
         </tr>
         <tr>
             <td colspan="3" align="right">
+                <form action="terms.html>
                 I agree with<a href="terms.html" target="_blank"> terms & conditions</a>
                              <input type="checkbox" name="terms"/>
+                </form>
             </td>
         </tr>
         <tr>
