--- a/confirmation.html
+++ b/confirmation.html
@@ -11,7 +11,9 @@
         <tr>
             <td>
                 <hr>
-                <h1>&#10298; &#10298; Tra ta ta Restaurant <img width="30" src="food.ico" alt="" /> Fast Delivery Food &#10263; &#10263;</h1>
+                <h1 style="
+                    font-family: Arial;
+                ">&#10298; &#10298; Tra ta ta Restaurant <img width="30" src="food.ico" alt="" /> Fast Delivery Food &#10263; &#10263;</h1>
                 <hr>
             </td>
         </tr>
