--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <tr>
             <td colspan="4">
                 <hr>
-                <h1>&#10298; &#10298; Tra ta ta Restaurant <img width="30" src="food.ico" alt="" /> Fast Delivery Food &#10263; &#10263;</h1>
+                <h1 style="
+                    font-family: Arial;
+                ">&#10298; &#10298; Tra ta ta Restaurant <img width="30" src="food.ico" alt="" /> Fast Delivery Food &#10263; &#10263;</h1>
             <hr>
             </td>
         </tr>
@@ -42,7 +44,7 @@
             </td>
         </tr>
         <tr>
-            <td bgcolor="green" colspan="3">
+            <td bgcolor="CadetBlue" colspan="3">
                 <h2>Order Information</h2>
             </td>
         </tr>
@@ -104,7 +106,7 @@
             </td>
             <td colspan="2">
                 <form>
-                    <input type="time" name="time" />
+                    <input type="time" name="time" placeholder="10:00 PM" />
                 </form>
             </td>
         </tr>
@@ -113,16 +115,21 @@
         </tr>
         <tr>
             <td colspan="3" align="right">
-                <form action="terms.html>
+            <form action="terms.html">
                 I agree with<a href="terms.html" target="_blank"> terms & conditions</a>
                              <input type="checkbox" name="terms"/>
-                </form>
+            </form>
             </td>
         </tr>
         <tr>
             <td colspan="3" align="right">
                 <form action="confirmation.html">
-                        <button>
+                        <button style="
+                            background-color: CadetBlue;
+                            color: white;
+                            padding: 9px;
+                            border: 4px solid black;
+                        ">
                             ORDER NOW
                             <img align="top" height="20" src="delivery.icon.png" alt="">
                         </button>
